--- a/halo/review.html
+++ b/halo/review.html
@@ -103,6 +103,12 @@
           </div>
         </div>
       </div>
+      <div class="breadcrumb-wrapper container-xl">
+        <ul class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
+          <li class="breadcrumb-item active">Đánh giá</li>
+        </ul>
+      </div>
       <div class="review__main-banner"><img class="main-banner__logo" src="img/img--misc/logo-white.png" alt=""><img class="main-banner__text" src="img/img--review/banner-text.png" alt=""></div>
       <section class="display-till-md">
         <div class="carousel slide" id="sub-banner-area--min" data-ride="carousel" data-touch="true">
@@ -113,13 +119,13 @@
           </ul>
           <div class="carousel-inner"><a class="carousel-item active" href="review-details.html"> <img src="/halo/img/img--review/sub-banner-big--min.jpg" alt="">
               <div class="carousel-caption">
-                <h3>Nikon Z7 Review:&nbsp; </h3>
-                <p>Canh bạc cho tương lai của Nikon</p>
+                <h3>Một ngày cùng Canon 35mm f/1.4&nbsp;L:</h3>
+                <p>Mối tình đầu với team "viền đỏ"</p>
               </div></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-sub-banner-1.png" alt=""></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-sub-banner-2.png" alt=""></a></div><a class="carousel-control-prev" href="#sub-banner-area--min" data-slide="prev"><span class="carousel-control-prev-icon"></span></a><a class="carousel-control-next" href="#sub-banner-area--min" data-slide="next"><span class="carousel-control-next-icon"></span></a>
         </div>
       </section>
-      <section class="container-xl hidden-till-md" id="sub-banner-area--max"><a class="review__sub-banner--big" href="review-details.html"><span>Nikon Z7 Review: </span><span>Canh bạc cho tương lai của Nikon</span></a>
-        <div class="review__sub-banner--small-area"> <a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-sub-banner-1.png" alt=""></a><a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-sub-banner-2.png" alt=""></a></div>
+      <section class="container-xl hidden-till-md" id="sub-banner-area--max"><a class="review__sub-banner--big" href="review-details.html"><span>Một ngày cùng Canon 35mm f/1.4&nbsp;L:</span><span>Mối tình đầu với team "viền đỏ"</span></a>
+        <div class="review__sub-banner--small-area"> <a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-sub-banner-1.png" alt=""></a><a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-sub-banner-2.png" alt=""></a><a class="review__sub-banner--small" href="review-details.html"><span class="easter-egg">60D Review </span><img src="img/img--review/review-small-banner-max-v3.jpg" alt=""></a></div>
       </section>
       <section class="main-area container-xl">
         <div class="review__post-area">
@@ -144,7 +150,7 @@
             <div class="spinner-grow text-dark mx-3"></div>
             <div class="spinner-grow text-dark"></div>
           </div>
-          <button class="btn seemore-btn btn--dark">Xem thêm</button>
+          <button class="btn btn--seemore btn--dark">Xem thêm</button>
         </div>
         <aside class="review__aside-area hidden-till-md">
           <h3 class="aside__header">Đọc nhiều nhất</h3><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-v2.jpg" alt="">
