--- a/halo/review-details.html
+++ b/halo/review-details.html
@@ -104,58 +104,62 @@
           </div>
         </div>
       </div>
+      <div class="breadcrumb-wrapper container-xl">
+        <ul class="breadcrumb">
+          <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
+          <li class="breadcrumb-item"> <a href="review.html">Đánh giá</a></li>
+          <li class="breadcrumb-item active">Canon 1DX Mark III: Vua của các vị&nbsp;vua</li>
+        </ul>
+      </div>
       <div class="review__main-banner"><img class="main-banner__logo" src="img/img--misc/logo-white.png" alt=""><img class="main-banner__text" src="img/img--review/banner-text.png" alt=""></div>
       <section class="main-area container-xl">
         <div class="review__post-area review-article">
-          <h1 class="review-article__header text-left">Canon 1DX Mark III: Vua của các vị vua</h1>
+          <h1 class="review-article__header text-left">Canon 1DX Mark III: Vua của các vị&nbsp;vua</h1>
           <h3 class="review-article__subtext post__subtext font-italic"> <span class="post__author">Trung Đức</span><span class="post__time-icon mx-2 mx-md-3 mx-xl-4"> <i class="far fa-clock"></i></span><span class="post__time-dates">01/01/2021</span></h3>
-          <h2 class="review-article__preview text-left"> <span>Cầm 1DX mark III không chỉ mang lại sự phấn khích với thiết bị công nghệ cao mà còn là niềm cảm hứng bất tận khi tác nghiệp.</span></h2>
+          <h2 class="review-article__preview text-left"> <span>Cầm 1DX mark III không chỉ mang lại sự phấn khích với thiết bị công nghệ cao mà còn là niềm cảm hứng bất tận khi tác&nbsp;nghiệp.</span></h2>
           <div class="review-article__content">
             <div class="article__section article__section--design">
               <h2 class="article__header">THIẾT KẾ</h2>
-              <figure> <img src="img/img--review/article-img-1.jpg" alt="">
+              <figure class="figure--full"> <img src="img/img--review/article-img-1.jpg" alt="">
                 <figcaption>Một trong những chiếc máy to nhất trong mọi máy full-frame, trọng lượng khoảng 1.5kg.</figcaption>
               </figure>
-              <figure> <img src="img/img--review/article-img-2.jpg" alt="">
-                <figcaption>Nikon D850 (trái) đặt cạnh 1DX mark III (bên phải)</figcaption>
+              <figure class="figure--full"> <img src="img/img--review/article-img-2.jpg" alt="">
+                <figcaption>Nikon D850 (trái) đặt cạnh 1DX mark III (bên&nbsp;phải)</figcaption>
               </figure>
-              <p class="article__text">Đây là một trong những chiếc máy ảnh full-frame đắt nhất của Canon có giá bán là 189 triệu đồng (tính đến 2020). Không chỉ vậy, các phụ kiện của chiếc máy này cũng rất nhiều tiền, ví dụ cục pin đi kèm cũng tầm 4,5 triệu ~ 5 triệu đồng một cục. Cả thẻ nhớ cũng có giá 12 triệu đồng, còn có cả hai khe cắm thẻ. </p>
-              <figure> <img src="img/img--review/article-img-3.jpg" alt="">
+              <p class="article__text">Đây là một trong những chiếc máy ảnh full-frame đắt nhất của Canon có giá bán là 189 triệu đồng (tính đến 2020). Không chỉ vậy, các phụ kiện của chiếc máy này cũng rất nhiều tiền, ví dụ cục pin đi kèm cũng tầm 4,5 triệu ~ 5 triệu đồng một cục. Cả thẻ nhớ cũng có giá 12 triệu đồng, còn có cả hai khe cắm&nbsp;thẻ. </p>
+              <figure class="figure--half">  <img src="img/img--review/article-img-3.jpg" alt="">
                 <figcaption>1DX Mark III có hai khe cắm thẻ CFexpress</figcaption>
               </figure>
-              <figure> <img src="img/img--review/article-img-4.jpg" alt="">
+              <figure class="figure--half">  <img src="img/img--review/article-img-4.jpg" alt="">
                 <figcaption>Các cổng kết nối trên Canon 1DX mark III</figcaption>
               </figure>
-              <figure> <img src="img/img--review/article-img-5.jpg" alt="">
-                <figcaption>Ở mặt trước bên phải, ta có phần tay cầm dọc da khổng lồ. Cạnh lens là rất nhiều nút bấm.</figcaption>
+              <figure class="figure--half"> <img src="img/img--review/article-img-5.jpg" alt="">
+                <figcaption>Ở mặt trước bên phải, ta có phần tay cầm dọc da khổng lồ. Cạnh lens là rất nhiều nút&nbsp;bấm.</figcaption>
               </figure>
-              <figure> <img src="img/img--review/article-img-6.jpg" alt="">
-                <figcaption>Còn bên trái phía trên của máy là ký hiệu 1DX danh giá. Phía dưới là dòng chữ mark III, còn trên cùng là cục gù to "khủng".</figcaption>
-              </figure>
-              <figure> <img src="img/img--review/article-img-7.jpg" alt="">
-                <figcaption>Phía dưới lại thêm một màn hình nhỏ hỗ trợ . Khi quay dọc máy ra, ta sẽ thấy đây chính là báng tay cầm thứ hai. 1DX mark III còn có màn hình phụ và các nút điều khiển. Đặc biệt là nó có màn hình chính rất lớn.</figcaption>
+              <figure class="figure--half"> <img src="img/img--review/article-img-7.jpg" alt="">
+                <figcaption>Khi quay dọc máy ra, ta sẽ thấy đây chính là báng tay cầm thứ hai. 1DX mark III còn có màn hình phụ và các nút điều&nbsp;khiển.</figcaption>
               </figure>
             </div>
             <div class="article__section article__section--features"> 
               <h2 class="article__header">TÍNH NĂNG</h2>
-              <p class="article__text">Dù chụp ở môi trường gần như tối hoàn toàn. Canon 1DX Mark III vẫn bắt nét được ngay lập tức, rất nhanh và đáng tin cậy</p>
+              <p class="article__text">Dù chụp ở môi trường gần như tối hoàn toàn. Canon 1DX Mark III vẫn bắt nét được ngay lập tức, rất nhanh và đáng tin&nbsp;cậy</p>
               <figure> <img src="img/img--review/article-img-8.png" alt="">
-                <figcaption>F-stop: f/2.8 | Exposure Time: 1/30 sec | ISO Speed: 100 | Lens: EF85mm f/1.4L IS USM       </figcaption>
+                <figcaption>F-stop: f/2.8 | Exposure Time: 1/30 sec | ISO Speed: 100&nbsp;|&nbsp;Lens:&nbsp;EF85mm&nbsp;f/1.4L&nbsp;IS&nbsp;USM       </figcaption>
               </figure>
             </div>
           </div>
           <div class="review-article__links">
             <ul> 
               <li> <a class="text-primary" href="#">Top 5 DSLR đáng mua năm 2021</a></li>
-              <li> <a class="text-primary" href="#">Nikon Z7 Review: Canh bạc cho tương lai của Nikon</a></li>
+              <li> <a class="text-primary" href="#">Nikon Z7 Review: Canh bạc cho tương lai của&nbsp;Nikon</a></li>
             </ul>
           </div>
         </div>
         <aside class="review__aside-area hidden-till-md">
           <h3 class="aside__header">Đọc nhiều nhất</h3><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-v2.jpg" alt="">
-            <p class="aside__post--header">Vị thế hiện tại của 2 ông lớn Ca-Ni</p></a><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-v2.jpg" alt="">
-            <p class="aside__post--header">Vị thế hiện tại của 2 ông lớn Ca-Ni</p></a><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-v2.jpg" alt="">
-            <p class="aside__post--header">Vị thế hiện tại của 2 ông lớn Ca-Ni</p></a>
+            <p class="aside__post--header">Vị thế hiện tại của 2 ông&nbsp;lớn&nbsp;Ca-Ni</p></a><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-v2.jpg" alt="">
+            <p class="aside__post--header">Vị thế hiện tại của 2 ông&nbsp;lớn&nbsp;Ca-Ni</p></a><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-v2.jpg" alt="">
+            <p class="aside__post--header">Vị thế hiện tại của 2 ông&nbsp;lớn&nbsp;Ca-Ni</p></a>
         </aside>
       </section>
     </main>
