--- a/halo/parts/domestic-card.html
+++ b/halo/parts/domestic-card.html
@@ -18,7 +18,7 @@
     </div>
     <div class="form-group">
       <label for="input__num">Nhập số thẻ:&nbsp;<i>(Viết liền)</i></label>
-      <input class="form-control front-input" id="input__num" type="text" required="required"/>
+      <input class="form-control front-input card-num-input" id="input__num" type="text" required="required" minlength="16" maxlength="16" onkeypress="return isNumber(event)"/>
     </div>
     <div class="form-group input__dates">
       <label for="domestic-input__month">Ngày hết hạn:&nbsp; <i>(chỉ nhập 2 số cuối của năm)</i></label>
@@ -27,7 +27,7 @@
     </div>
     <div class="form-group">
       <label for="input__name">Nhập tên chủ thẻ:&nbsp; <i>(Viết cách, không dấu)</i></label>
-      <input class="form-control front-input" id="input__name" type="text" required="required"/>
+      <input class="form-control front-input" id="input__name" type="text" required="required" maxlength="30"/>
     </div><a class="btn btn--confirmation final-btn" href="checkout.html">Xác nhận</a>
   </form>
 </div>
