--- a/halo/parts/main-carousel.html
+++ b/halo/parts/main-carousel.html
@@ -20,8 +20,7 @@
             </div>
           </div>
           <p class="main-carousel__text">ĐỊNH NGHĨA LẠI </p>
-          <p class="main-carousel__text">CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI</p>
-          <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
+          <p class="main-carousel__text">CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI</p><a class="btn btn--light seemore-btn" href="details.html">Xem chi tiết</a>
         </div>
         <div class="carousel-caption__img"></div>
         <div class="carousel-caption__extra hidden-till-md">
@@ -59,8 +58,7 @@
           </div>
           <p class="main-carousel__text display-till-md">SỰ HOÀN HẢO</p>
           <p class="main-carousel__text hidden-till-md">Sự hoàn hảo chưa bao giờ đơn giản đến vậy</p>
-          <p class="main-carousel__text display-till-md">CHƯA BAO GIỜ ĐƠN GIẢN  ĐẾN VẬY</p>
-          <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
+          <p class="main-carousel__text display-till-md">CHƯA BAO GIỜ ĐƠN GIẢN  ĐẾN VẬY</p><a class="btn btn--light seemore-btn" href="details.html">Xem chi tiết</a>
         </div>
         <div class="carousel-caption__img"></div>
       </div>
@@ -78,8 +76,7 @@
             <div class="carousel-caption__img"></div>
           </div>
           <p class="main-carousel__text font-italic font-weight-normal">"Một ngàm cho tất cả"</p>
-          <p class="main-carousel__text">Kết nối mọi thứ với ngàm E-mount của <span class="logo-sony-inline">SONY</span></p>
-          <button class="btn btn--light seemore-btn" type="button">Xem chi tiết</button>
+          <p class="main-carousel__text">Kết nối mọi thứ với ngàm E-mount của <span class="logo-sony-inline">SONY</span></p><a class="btn btn--light seemore-btn" href="details.html">Xem chi tiết</a>
         </div>
         <div class="carousel-caption__img display-till-md"></div>
       </div>
