--- a/halo/index.html
+++ b/halo/index.html
@@ -184,7 +184,7 @@
               </div>
               <div class="carousel-caption__img display-till-md"></div>
             </div>
-          </div><a class="carousel-control-prev" href="#main-carousel" data-slide="prev"><img src="img/img--misc/prev-arrow-xs-v3.png"></a><a class="carousel-control-next" href="#main-carousel" data-slide="next"><img src="img/img--misc/next-arrow-xs-v3.png"></a>
+          </div><a class="carousel-control-prev" href="#main-carousel" data-slide="prev"><img src="img/img--misc/prev-arrow-xs-v3.png" alt="next"></a><a class="carousel-control-next" href="#main-carousel" data-slide="next"><img src="img/img--misc/next-arrow-xs-v3.png" alt="prev"></a>
         </div>
       </div>
       <section class="intro intro--camera">
