--- a/halo/review-details.html
+++ b/halo/review-details.html
@@ -156,10 +156,10 @@
           </div>
         </div>
         <aside class="review__aside-area hidden-till-md">
-          <h3 class="aside__header">Đọc nhiều nhất</h3><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-v2.jpg" alt="">
-            <p class="aside__post--header">Vị thế hiện tại của 2 ông&nbsp;lớn&nbsp;Ca-Ni</p></a><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-v2.jpg" alt="">
-            <p class="aside__post--header">Vị thế hiện tại của 2 ông&nbsp;lớn&nbsp;Ca-Ni</p></a><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-v2.jpg" alt="">
-            <p class="aside__post--header">Vị thế hiện tại của 2 ông&nbsp;lớn&nbsp;Ca-Ni</p></a>
+          <h3 class="aside__header">Đọc nhiều nhất</h3><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-1.png" alt="">
+            <p class="aside__post--header">D500 Review: Canh bạc của Nikon</p></a><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-2.jpg" alt="">
+            <p class="aside__post--header">Vị thế hiện tại của 2 ông lớn Ca-Ni</p></a><a class="aside__post d-block" href=""><img class="aside__post--img" src="img/img--review/aside-img-3.png" alt="">
+            <p class="aside__post--header">D5600 Review: Máy ảnh cho mọi nhà</p></a>
         </aside>
       </section>
     </main>
