--- a/halo/index.html
+++ b/halo/index.html
@@ -36,13 +36,23 @@
     <header id="header">
       <nav class="navbar navbar-expand-md navbar-dark">
         <div class="container-xl px-4 px-sm-5 px-xl-0">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="navbar-brand" href="index.html"><img class="header__logo" src="img/img--misc/logo-white.png" alt=""></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">
+            <img class="header__logo" src="img/img--misc/logo-white.png" alt="">
+          </a>
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <div class="search-bar-till-md">
-              <input class="search-area" type="text" placeholder="Tìm kiếm..."><a class="btn search-btn" href="search-result.html"><i class="fas fa-search"></i></a>
+              <input class="search-area" type="text" placeholder="Tìm kiếm...">
+              <a class="btn search-btn" href="search-result.html">
+                <i class="fas fa-search"></i>
+              </a>
             </div>
             <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link py-3 px-md-3" href="camera-hub.html">Máy ảnh</a></li>
+              <li class="nav-item">
+                <a class="nav-link py-3 px-md-3" href="camera-hub.html">Máy ảnh</a>
+              </li>
               <li class="nav-item"><a class="nav-link py-3 px-md-3" href="camera-hub.html">Ống kính</a></li>
               <li class="nav-item"><a class="nav-link py-3 px-md-3" href="camera-hub.html">Phụ kiện</a></li>
               <li class="nav-item"><a class="nav-link py-3 px-md-3" href="review.html">Đánh giá</a></li>
