--- a/halo/review.html
+++ b/halo/review.html
@@ -117,11 +117,11 @@
             <li data-target="#sub-banner-area--min" data-slide-to="1"></li>
             <li data-target="#sub-banner-area--min" data-slide-to="2"></li>
           </ul>
-          <div class="carousel-inner"><a class="carousel-item active" href="review-details.html"> <img src="/halo/img/img--review/sub-banner-big--min.jpg" alt="">
+          <div class="carousel-inner"><a class="carousel-item active" href="review-details.html"> <img src="/halo/img/img--review/review-big-banner-max-v7.jpg" alt="">
               <div class="carousel-caption">
                 <h3>Một ngày cùng Canon 35mm f/1.4&nbsp;L:</h3>
                 <p>Mối tình đầu với team "viền đỏ"</p>
-              </div></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-sub-banner-3.png" alt=""></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-sub-banner-4.jpg" alt=""></a></div><a class="carousel-control-prev" href="#sub-banner-area--min" data-slide="prev"><span class="carousel-control-prev-icon"></span></a><a class="carousel-control-next" href="#sub-banner-area--min" data-slide="next"><span class="carousel-control-next-icon"></span></a>
+              </div></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-sub-banner-3.png" alt=""><span class="easter-egg">Sigma 17-50mm Review </span></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-sub-banner-4.jpg" alt=""></a></div><a class="carousel-control-prev" href="#sub-banner-area--min" data-slide="prev"><span class="carousel-control-prev-icon"></span></a><a class="carousel-control-next" href="#sub-banner-area--min" data-slide="next"><span class="carousel-control-next-icon"></span></a>
         </div>
       </section>
       <section class="container-xl hidden-till-md" id="sub-banner-area--max"><a class="review__sub-banner--big" href="review-details.html"><span>Một ngày cùng Canon 35mm f/1.4&nbsp;L:</span><span>Mối tình đầu với team "viền đỏ"</span></a>
